testsuite/poke.pkl/return-diag-3.pk
/* { dg-do compile } */

fun lala = void:
{
  return 10; /* { dg-error "returning a value" } */
}
